--- a/index.html
+++ b/index.html
@@ -2,3 +2,16 @@
 layout: home
 # Index page
 ---
+
+<!-- Note - this is ignored because of the home layout. It can be turned to a page layout instead -->
+# how
+hmmmmm
+
+
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
